gunicorn-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: gunicorn
  name: gunicorn
spec:
  ports:
    - name: "gunicorn"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: gunicorn
status:
  loadBalancer: {}
