haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: haproxy
  name: haproxy
spec:
  ports:
    - name: "haproxy"
      port: 8080
      targetPort: 80
  selector:
    io.kompose.service: haproxy
status:
  loadBalancer: {}
