ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gunicorn
spec:
  rules:
  - host: testapp.test
    http:
      paths:
      - backend:
          service:
            name: haproxy
            port:
              name: haproxy
        path: /
        pathType: ImplementationSpecific
